[gd_scene load_steps=4 format=2]

[ext_resource path="res://Cards/CardBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://MainGame.gd" type="Script" id=2]
[ext_resource path="res://Board.gd" type="Script" id=3]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Board" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="PlayerCards" type="Node2D" parent="Board"]

[node name="ScoreDisplay" type="Node2D" parent="."]

[node name="Portrait" type="Node2D" parent="."]

[node name="Counter" type="Node2D" parent="."]

[node name="CardBase" parent="." instance=ExtResource( 1 )]
