[gd_scene load_steps=12 format=2]

[ext_resource path="res://Board.gd" type="Script" id=1]
[ext_resource path="res://MainGame.gd" type="Script" id=2]
[ext_resource path="res://Cards/CardBase.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI.gd" type="Script" id=4]
[ext_resource path="res://Font/Shure Tech Mono Nerd Font Complete.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://UI/ICON HAND-1.png.png" type="Texture" id=6]
[ext_resource path="res://UI/ICON SCISSORS-1.png.png" type="Texture" id=7]
[ext_resource path="res://UI/ICON PUNCH-1.png.png" type="Texture" id=8]
[ext_resource path="res://Background/Background_02.png" type="Texture" id=9]
[ext_resource path="res://Background/Blanket_01-1.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 5 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )
basic_card = ExtResource( 3 )
deck_rock = 4
deck_paper = 2
deck_scissors = 2

[node name="Board" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="ScoreDisplay" type="Node2D" parent="."]

[node name="Portrait" type="Node2D" parent="."]

[node name="Counter" type="Node2D" parent="."]

[node name="PlayerCards" type="Node2D" parent="."]
position = Vector2( 160, 170 )

[node name="PlayerActiveCard" type="Node2D" parent="."]
position = Vector2( 200, 100 )

[node name="CPUCards" type="Node2D" parent="."]
position = Vector2( 160, 30 )

[node name="CPUActiveCard" type="Node2D" parent="."]
position = Vector2( 120, 100 )

[node name="StartCards" type="Node2D" parent="."]
position = Vector2( 160, 100 )

[node name="DiscardCards" type="Node2D" parent="."]
position = Vector2( 260, 100 )

[node name="UI" type="CanvasLayer" parent="."]
layer = -1
script = ExtResource( 4 )

[node name="ScoreBox" type="MarginContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/ScoreBox"]
margin_left = 20.0
margin_top = 20.0
margin_right = 68.0
margin_bottom = 34.0
alignment = 1

[node name="Score" type="Label" parent="UI/ScoreBox/HBoxContainer"]
margin_right = 48.0
margin_bottom = 14.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "10000000"
align = 1

[node name="CounterBox" type="MarginContainer" parent="UI"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -15.0
margin_top = -45.0
margin_right = 67.0
margin_bottom = 45.0
grow_horizontal = 0
grow_vertical = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CounterBox"]
margin_left = 20.0
margin_top = 20.0
margin_right = 62.0
margin_bottom = 70.0
grow_horizontal = 0

[node name="RockContainer" type="HBoxContainer" parent="UI/CounterBox/VBoxContainer"]
margin_right = 42.0
margin_bottom = 14.0

[node name="TextureRect" type="TextureRect" parent="UI/CounterBox/VBoxContainer/RockContainer"]
margin_right = 14.0
margin_bottom = 14.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 8 )
stretch_mode = 5

[node name="RockCounter" type="Label" parent="UI/CounterBox/VBoxContainer/RockContainer"]
margin_left = 18.0
margin_right = 42.0
margin_bottom = 14.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "Rock"
align = 2
valign = 1

[node name="PaperContainer" type="HBoxContainer" parent="UI/CounterBox/VBoxContainer"]
margin_top = 18.0
margin_right = 42.0
margin_bottom = 32.0

[node name="TextureRect" type="TextureRect" parent="UI/CounterBox/VBoxContainer/PaperContainer"]
margin_right = 20.0
margin_bottom = 14.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
stretch_mode = 5

[node name="PaperCounter" type="Label" parent="UI/CounterBox/VBoxContainer/PaperContainer"]
margin_left = 24.0
margin_right = 42.0
margin_bottom = 14.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "Pap"
align = 2
valign = 1

[node name="ScissorsContainer" type="HBoxContainer" parent="UI/CounterBox/VBoxContainer"]
margin_top = 36.0
margin_right = 42.0
margin_bottom = 50.0

[node name="TextureRect" type="TextureRect" parent="UI/CounterBox/VBoxContainer/ScissorsContainer"]
margin_right = 14.0
margin_bottom = 14.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
stretch_mode = 5

[node name="ScissorsCounter" type="Label" parent="UI/CounterBox/VBoxContainer/ScissorsContainer"]
margin_left = 18.0
margin_right = 42.0
margin_bottom = 14.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "Scis"
align = 2
valign = 1

[node name="BG" type="Sprite" parent="UI"]
position = Vector2( 160, 100 )
z_index = -3
z_as_relative = false
texture = ExtResource( 9 )

[node name="Napkin" type="Sprite" parent="UI"]
position = Vector2( 40, 100 )
scale = Vector2( 1.08, 1.08 )
z_index = -3
texture = ExtResource( 10 )

[node name="Napkin2" type="Sprite" parent="UI"]
position = Vector2( 280, 100 )
rotation = 3.14159
scale = Vector2( 1.08, 1.08 )
z_index = -3
texture = ExtResource( 10 )
